# vibewriting

./: .coverage  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  build.sh  origin.md  paper_config.yaml  pyproject.toml
.agents/skills/: README.md
.claude/: settings.local.json
.claude/team-plan/: bug-fix-research.md  bug-fix.md  phase-4-single-agent-writing.md  phase-5-multi-agent-orchestration.md  phase-6-compilation-quality.md  phase-7-end-to-end-integration.md  vibewriting-research.md
.hypothesis/constants/: 023c0fead30a03a4  0ab4536563139ff8  1183378a69bc1e9b  123ccb1d18d31c32  1b5827df0f74fa28  1c0335d4348863a5  1d6514378077733b  1dc07adec54068e3  218f241e5897d6c6  323b8b4c8dbc0b9e  33ffd76b42659054  38a2a31cd9fb73a3  3ad5cfb262335e07  3c3f527b5a1c8281  3cfb7cd7f8898c7e  3e57c9867d2faa7a  41fcfdddd943bf98  4337cced5d0b0c43  4514547c179bd264  49c175f97536c8c7  55e3ada5b4a6d877  584e90437ac593c4  5851cfb5af8037a1  58b86406734f86fa  5938aca12ad2b784  5a74c4f00eaa6e53  680cc4bc2b0b078b  6f6e57e873e5a228  78ddc65bf5309c56  7f1ae0e99c29e1e4  80b33668bb9b7304  84edf12d8cf050c8  87bf0f2321132a9e  8b02a55d889184a1  8cceec6763466127  8f60375bc403c63c  91fba5a5d66a9777  (+40 more)
docs/: config-reference.md  cross-project-guide.md  faq.md  quickstart.md
llmdoc/: index.md
openspec/: ROADMAP.md
output/: asset_manifest.json  checkpoint.json  glossary.json  orchestration_report.json  paper_state.json  peer_review.json  peer_review.md  phase6_report.json  run_metrics.json  symbols.json
paper/: .gitignore  latexmkrc  main.tex
scripts/: create_literature.py  draft_stats.py  orchestration_check.py  phase6_report.py  run_metrics.py  run_orchestration.py  validate_env.py
tests/: test_checkpoint.py  test_config_output_formats.py  test_config_paper.py  test_glossary_symbols.py  test_metrics.py  test_models.py  test_paper_state.py  test_pipeline.py  test_processing.py  test_visualization.py
(+195 files in other folders)
