[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibewriting"
version = "0.1.0"
description = "Automated academic paper writing system powered by Claude Code and Dify"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<2.0",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx",
    "python-dotenv",
    "tabulate>=0.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
perf = [
    "polars>=1.30",
    "pyarrow>=15.0",
]
latex = [
    "pylatex>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.14",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vibewriting"]
